sistema V 1.7
